--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "start": "serve dist",
+    "start": "HOST=0.0.0.0 react-scripts start",
     "lint": "eslint .",
     "preview": "vite preview"
   },
